# client_server_application

./: .gitignore  CMakeLists.txt  README.md
ProgramFirst_Client/: CMakeLists.txt  program_first.cpp
ProgramSecond_Server/: CMakeLists.txt  program_second.cpp
